--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,9 +12,14 @@
     <color name="lightPink">#f7b9c4</color>
     <color name="Pink">#f797c5</color>
     <color name="darkerPink">#f6629b</color>
+    <color name="darkestPink">#EF5A8D</color>
+
     <color name="purple">#ca6ce4</color>
     <color name="darkPurple">#3B0854</color>
     <color name="teal">#43e0cf</color>
     <color name="brown">#533638</color>
+    <color name="ligthBlue">#93E5EB</color>
+
+
 
 </resources>
